// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChangePasswordForm /> renders ChangePasswordForm component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-6 offset-md-3"
    >
      <div
        className="register-wrap"
      >
        <div
          className="card"
        >
          <div
            className="card-header text-center"
          >
            <h2>
               
              <FormattedMessage
                id="restore_password.header"
                values={Object {}}
              />
               
            </h2>
          </div>
          <div
            className="card-block"
          >
            <form>
              <ErrorMessage
                name="password"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password"
                  type="password"
                />
              </div>
              <ErrorMessage
                name="password_confirmation"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password_confirmation"
                  type="password"
                />
              </div>
              <button
                className="btn btn-primary mb-3"
                type="submit"
              >
                <FormattedMessage
                  id="restore_password.change_my_password"
                  values={Object {}}
                />
              </button>
            </form>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_up"
            >
              <FormattedMessage
                id="sign_in.register"
                values={Object {}}
              />
            </Link>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_in"
            >
              <FormattedMessage
                id="sign_up.login"
                values={Object {}}
              />
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChangePasswordForm /> renders with pristine = true 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-6 offset-md-3"
    >
      <div
        className="register-wrap"
      >
        <div
          className="card"
        >
          <div
            className="card-header text-center"
          >
            <h2>
               
              <FormattedMessage
                id="restore_password.header"
                values={Object {}}
              />
               
            </h2>
          </div>
          <div
            className="card-block"
          >
            <form>
              <ErrorMessage
                name="password"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password"
                  type="password"
                />
              </div>
              <ErrorMessage
                name="password_confirmation"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password_confirmation"
                  type="password"
                />
              </div>
              <button
                className="btn btn-primary mb-3"
                disabled={true}
                type="submit"
              >
                <FormattedMessage
                  id="restore_password.change_my_password"
                  values={Object {}}
                />
              </button>
            </form>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_up"
            >
              <FormattedMessage
                id="sign_in.register"
                values={Object {}}
              />
            </Link>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_in"
            >
              <FormattedMessage
                id="sign_up.login"
                values={Object {}}
              />
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChangePasswordForm /> renders with submitting = true 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-md-6 offset-md-3"
    >
      <div
        className="register-wrap"
      >
        <div
          className="card"
        >
          <div
            className="card-header text-center"
          >
            <h2>
               
              <FormattedMessage
                id="restore_password.header"
                values={Object {}}
              />
               
            </h2>
          </div>
          <div
            className="card-block"
          >
            <form>
              <ErrorMessage
                name="password"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password"
                  type="password"
                />
              </div>
              <ErrorMessage
                name="password_confirmation"
              />
              <div
                className="input-group mb-3"
              >
                <Field
                  className="form-control"
                  component="input"
                  name="password_confirmation"
                  type="password"
                />
              </div>
              <button
                className="btn btn-primary mb-3"
                disabled={true}
                type="submit"
              >
                <FormattedMessage
                  id="restore_password.change_my_password"
                  values={Object {}}
                />
              </button>
            </form>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_up"
            >
              <FormattedMessage
                id="sign_in.register"
                values={Object {}}
              />
            </Link>
            <Link
              className="mr-3"
              replace={false}
              to="/sign_in"
            >
              <FormattedMessage
                id="sign_up.login"
                values={Object {}}
              />
            </Link>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
